<resources>

    <!--Landing Page-->
    <string name="app_name">Promise</string>
    <string name="subHeading">Welcome to Promise, your favorite task management app.</string>
    <string name="goToCreate">Create an Account</string>
    <string name="goToLogin">Log In</string>

    <!--Login Fields-->
    <string name="emailLabel">Email</string>
    <string name="emailHint">Enter your email</string>
    <string name="passwordLabel">Password</string>
    <string name="passwordHint">Enter your password</string>

    <!--Create Page-->
    <string name="createMessage">Create Account</string>
    <string name="registerButton">Create My Account</string>
    <string name="nameLabel">Name</string>
    <string name="firstNameInput">Enter your name</string>
    <string name="intro">Introduce yourself!</string>
    <string name="introInput">Say anything</string>

    <!--Login Page-->
    <string name="loginMessage">Sign In</string>
    <string name="signInButton">Sign In</string>


    <!--User's Home Page-->
    <string name="profilePage">PlaceHolder</string>
    <string name="aboutMeLabel">About Me</string>
    <string name="aboutMe">Placeholder</string>

    <string name="projectPage">Project Page</string>
    <string name="inviteSent">Invite Sent</string>
    <string name="requestSent">Request Sent</string>
    <string name="notifList">Notifications</string>
    <string name="title_activity_add_project">AddProject</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <!--Single Project Page-->
    <string name="projectName">Project Name</string>
    <string name="inviteButton">Invite</string>
    <string name="viewNotifsButton">Notifications</string>


    <!--Add Project Page-->
    <string name="projectNameHint">Project Name</string>
    <string name="projectDescHint">Project Description</string>

    <!--Recipient Info-->
    <string name="recipientEmailLabel">Email of the user you want to invite</string>
    <string name="sendInviteButton">Invite</string>
    <string name="recipientEmailHint">Enter their email here</string>

    <!--Invite Sent-->
    <string name="sentMessage">Your invite was sent to userEmail</string>
    <string name="someoneElse">Invite More</string>
    <string name="goBackProject">Back to project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more">more</string>
    <string name="content_description_more">See additional page options</string>
    <string name="edit_project_action_title">Edit Project</string>
    <string name="edit_project_action_description">Edit Project</string>
    <string name="invite_to_project_action_title">Invite Users</string>
    <string name="dashboard_add_action_description">Dashboard Add Action</string>
    <string name="title_activity_create_task">CreateTaskActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!--Task -->
    <string name="taskNameInput">Task Name</string>
    <string name="taskDesInput">Task Description</string>
    <string name="taskPriorityInput">Enter number</string>
    <string name="taskEstimateInput">Enter days</string>
    <string name="dialog_delete_task">Are you sure you want to delete this task?</string>
    <string name="delete_task">Delete task</string>
    <string name="cancel_task">Cancel</string>
    <string name="edit_task_label">Edit Task</string>

    <!--Notification Page-->
    <string name="personIconName">You\'ve been invited to work on a project</string>
    <string name="acceptInvite">Accept</string>
    <string name="rejectInvite">Reject</string>
    <string name="noNotifications">No notifications</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="sign_out_button_label">Sign Out</string>
    <string name="saved_email">saved_email</string>
    <string name="saved_password">saved_password</string>
    <string name="save_credentials">save_credentials</string>
    <string name="placeholder_user_list_item_name">First Last</string>

</resources>