<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/notifItemContainer"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:background="@color/cardview_light_background">

        <androidx.cardview.widget.CardView
            android:id="@+id/notifImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="60dp">

            <ImageView
                android:id="@+id/notifPersonIcon2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="centerCrop"
                android:src="@drawable/personicon2">

            </ImageView>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/notifTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@+id/notifImageView"
            android:text="@string/personIconName"
            android:textColor="@color/black"
            android:textSize="15sp">

        </TextView>


    </RelativeLayout>

</RelativeLayout>
